grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) => choice(
      $.top_level_shared_tail_function_branch,
      $.top_level_conditional,
      $._top_level_item_base,
      $.conditional_function_definition,
    ),

    function_definition: ($) => functionDefinitionWithBody($, $._function_body),

    _function_body: ($) => functionBodyChoice($, {
      blockRule: $.block,
      conditionalRule: $.block_conditional,
    }),

    callback_signature: ($) => seq(
      $._callback_signature_start,
      optional(field("types", choice($.identifier, $.tag_wildcard, $.macro_parameter))),
      ">",
    ),

    _callback_named_identifier: ($) => seq(
      field("name", $.identifier),
      optional(field("callback_signature", $.callback_signature)),
    ),

    parameter_list: ($) => seq(
      "(",
      optional($._parameter_list_items),
      ")",
    ),

    _parameter_list_items: ($) => directiveListItems($, {
      item: $._parameter_list_item,
      conditional: $.parameter_conditional,
      conditionalNoComma: $.parameter_conditional_no_comma,
    }),

    parameter_declaration: ($) => seq(
      repeat(choice("const", "stock")),
      optional("&"),
      optional(field("type", choice($.tagged_type, $.tag_set_type))),
      optional("&"),
      $._callback_named_identifier,
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      optional(seq("=", field("default_value", choice($.array_literal, $._expression)))),
    ),

    variable_declaration: ($) => choice(
      seq(
        repeat(field("prefix", $.identifier)),
        $._variable_declaration_prefix,
        repeat(field("qualifier_reference", $.declaration_qualifier_reference)),
        $._variable_declarator_list,
        ";",
      ),
      prec(1, seq(
        repeat(field("prefix", $.identifier)),
        $._variable_declaration_prefix,
        repeat(field("qualifier_reference", $.declaration_qualifier_reference)),
        alias($._state_variable_declarator, $.variable_declarator),
        statementTerminator($),
      )),
    ),

    _variable_declaration_prefix: ($) => repeat1(choice(
      $._declaration_qualifier,
      "public",
      "stock",
    )),

    _variable_declarator_list: ($) => directiveListItems($, {
      item: $.variable_declarator,
      conditional: $.variable_declarator_conditional,
      conditionalNoComma: $.variable_declarator_conditional_no_comma,
    }),

    variable_declarator: ($) => choice(
      seq(
        optional(field("type", $.tagged_type)),
        $._callback_named_identifier,
        repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
        optional(seq("=", field("initializer", choice($.array_literal, $._expression)))),
      ),
      seq(
        optional(field("type", $.tagged_type)),
        field("name", $.identifier),
        repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
        field("state", $.state_classifier),
      ),
    ),

    _state_variable_declarator: ($) => seq(
      optional(field("type", $.tagged_type)),
      field("name", $.identifier),
      repeat(choice($.dimension, $.fixed_dimension, $.packed_dimension)),
      field("state", $.state_classifier),
    ),

    tagged_type: ($) => seq(
      field("tag", choice($.identifier, $.tag_wildcard)),
      optional(field("callback_signature", $.callback_signature)),
      token.immediate(":"),
    ),

    dimension: ($) => seq("[", "]"),

    fixed_dimension: ($) => seq("[", field("size", choice($.expression_list, $._expression)), "]"),

    block: ($) => seq(
      "{",
      repeat($._block_statement),
      "}",
    ),

    _block_statement: ($) => blockConditionalChoice($, $._block_statement_base),

    _statement: ($) => blockConditionalChoice($, $._statement_base),

    if_statement: ($) => prec.right(seq(
      "if",
      "(",
      field("condition", choice($.expression_list, $._expression)),
      ")",
      field("consequence", $._statement),
      optional(seq("else", field("alternative", $._statement))),
    )),

    return_statement: ($) => seq(
      "return",
      optional(field("value", choice($.expression_list, $._expression))),
      ";",
    ),

    expression_statement: ($) => seq(
      field("expression", choice($.statement_expression_list, $._statement_expression)),
      statementTerminator($),
    ),

    _expression: ($) => choice(
      $._expression_not_binary,
      $.binary_expression,
    ),

    _statement_expression: ($) => choice(
      $._statement_expression_not_binary,
      $.binary_expression,
    ),

    sizeof_expression: ($) => prec(PREC.SIZEOF, choice(
      seq(
        "sizeof",
        field("argument", prec(PREC.SUBSCRIPT, $._sizeof_subscript_expression)),
      ),
      seq(
        "sizeof",
        field("argument", $.identifier),
      ),
      seq(
        "sizeof",
        "(",
        field("argument", $._sizeof_subscript_expression),
        ")",
      ),
      seq(
        "sizeof",
        "(",
        field("argument", $.identifier),
        ")",
      ),
    )),

    _sizeof_subscript_expression: ($) => prec.left(PREC.SUBSCRIPT, seq(
      field("array", choice(
        $.identifier,
        $.call_expression,
        $._sizeof_subscript_expression,
        $.subscript_expression,
        $.parenthesized_expression,
      )),
      "[",
      optional(field("index", choice($.expression_list, $._expression))),
      "]",
    )),

    binary_expression: ($) => binaryExpression($._expression, [
      ["||", PREC.LOGICAL_OR],
      ["&&", PREC.LOGICAL_AND],
      ["|", PREC.BITWISE_OR],
      ["^", PREC.BITWISE_XOR],
      ["&", PREC.BITWISE_AND],
      ["==", PREC.EQUALITY],
      ["!=", PREC.EQUALITY],
      ["<", PREC.RELATIONAL],
      ["<=", PREC.RELATIONAL],
      [">", PREC.RELATIONAL],
      [">=", PREC.RELATIONAL],
      ["<<", PREC.SHIFT],
      [">>>", PREC.SHIFT],
      [">>", PREC.SHIFT],
      ["+", PREC.ADD],
      ["-", PREC.ADD],
      ["...", PREC.ADD],
      ["*", PREC.MULTIPLY],
      ["/", PREC.MULTIPLY],
      ["%", PREC.MULTIPLY],
    ]),

    callback_member_expression: ($) => prec(PREC.CALL, seq(
      "@",
      ".",
      field("name", $.identifier),
    )),

    call_expression: ($) => prec.left(PREC.CALL, seq(
      field("function", choice(
        $.identifier,
        $.callback_member_expression,
        $.member_expression,
        $.parenthesized_expression,
        $.subscript_expression,
        $.tagged_expression,
      )),
      field("arguments", $.argument_list),
    )),

    argument_list: ($) => seq(
      "(",
      optional($._argument_list_items),
      ")",
    ),

    _argument_list_items: ($) => directiveListItems($, {
      item: $._argument_list_item,
      conditional: $.argument_conditional,
      conditionalNoComma: $.argument_conditional_no_comma,
    }),

    subscript_expression: ($) => prec.left(PREC.SUBSCRIPT, seq(
      field("array", choice(
        $.identifier,
        $.call_expression,
        $.member_expression,
        $.subscript_expression,
        $.parenthesized_expression,
      )),
      "[",
      field("index", choice($.expression_list, $._expression)),
      "]",
    )),

    integer_literal: ($) => token(/[0-9][0-9_]*/),

    string_literal: ($) => seq(
      '"',
      repeat(choice($.escape_sequence, token.immediate(prec(1, /[^"\\\r\n]+/)))),
      '"',
    ),

    boolean_literal: ($) => choice("true", "false"),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*(?:@+[A-Za-z0-9_]*)*/,
