test/corpus/callbacks.txt
=================
callback patterns
=================

public OnPlayerConnect(playerid)
{
    new name[MAX_PLAYER_NAME + 1];
    GetPlayerName(playerid, name, sizeof name);
    return 1;
}

public OnPlayerCommandText(playerid, cmdtext[])
{
    if (strcmp(cmdtext, "/spawn", true, sizeof cmdtext) == 0) {
        return 1;
    }

    return 0;
}

stock FormatPlayerLabel(playerid)
{
  new labels[MAX_PLAYERS][32];
  format(labels[playerid], sizeof labels[playerid], "%s", labels[playerid]);
  return 1;
}

stock Func:Claim<i>(Func:f<i>, &Func:d<>)
{
  new Func:local<>;
  return @.f(local);
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (variable_declaration
        (variable_declarator
          name: (identifier)
          (fixed_dimension
            size: (binary_expression
              left: (identifier)
              right: (integer_literal)))))
      (expression_statement
        expression: (call_expression
          function: (identifier)
          arguments: (argument_list
            (identifier)
            (identifier)
            (sizeof_expression
              argument: (identifier)))))
      (return_statement
        value: (integer_literal))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier))
      (parameter_declaration
        name: (identifier)
        (dimension)))
    body: (block
      (if_statement
        condition: (binary_expression
          left: (call_expression
            function: (identifier)
            arguments: (argument_list
              (identifier)
              (string_literal)
              (boolean_literal)
              (sizeof_expression
                argument: (identifier))))
          right: (integer_literal))
        consequence: (block
          (return_statement
            value: (integer_literal))))
      (return_statement
        value: (integer_literal))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        name: (identifier)))
    body: (block
      (variable_declaration
        (variable_declarator
          name: (identifier)
          (fixed_dimension
            size: (identifier))
          (fixed_dimension
            size: (integer_literal))))
      (expression_statement
        expression: (call_expression
          function: (identifier)
          arguments: (argument_list
            (subscript_expression
              array: (identifier)
              index: (identifier))
            (sizeof_expression
              array: (identifier)
              index: (identifier))
            (string_literal)
            (subscript_expression
              array: (identifier)
              index: (identifier)))))
      (return_statement
        value: (integer_literal))))
  (function_definition
    return_type: (tagged_type
      tag: (identifier))
    name: (identifier)
    callback_signature: (callback_signature
      types: (identifier))
    parameters: (parameter_list
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)
        callback_signature: (callback_signature
          types: (identifier)))
      (parameter_declaration
        type: (tagged_type
          tag: (identifier))
        name: (identifier)
        callback_signature: (callback_signature)))
    body: (block
      (variable_declaration
        (variable_declarator
          type: (tagged_type
            tag: (identifier))
          name: (identifier)
          callback_signature: (callback_signature)))
      (return_statement
        value: (call_expression
          function: (callback_member_expression
            name: (identifier))
          arguments: (argument_list
            (identifier)))))))
